# StudentsAgain

./: CMakeLists.txt  classDiagram.dio  save.txt
Headers/: MenuCase.h  Printer.h  Serializer.h  Student.h  StudentsDataBase.h  Validator.h  myVector.h
Headers/ConsoleMenu/: ConsoleMenu.h  ConsoleMenuFailures.h
Headers/Controllers/: StudentsDataBaseController.h
Headers/DataBase/: DataBaseAdapter.h  StudentsDataBase.h  myVector.h
Headers/Entities/: Student.h
Headers/Menu/: Menu.h
Headers/UserInterface/: Printer.h  StudentsManager.h  Validator.h
Headers/Utils/: Util.h
Source/: main.cpp
Source/Controllers/: StudentsDataBaseController.cpp
Source/DataBase/: Serializer.cpp  StudentsDataBase.cpp
Source/Entities/: Student.cpp
Source/UserInterface/: MenuCase.cpp  StudentsManager.cpp
Source/UserInterface/Menu/: Menu.cpp
Source/UserInterface/Printer/: Printer.cpp
Source/UserInterface/Validators/: Validator.cpp
Source/Utils/: Util.cpp
getListingPythonScript/: listing.txt  main.py
tmp/: algs.drawio
